feat: :construction: Add the first part of the HTML design
Added HTML layout for the top of page.

--- a/index.html
+++ b/index.html
@@ -13,5 +13,39 @@
 
 <body>
     
+    <footer class="footer__header">  
+        <a href="#"><img src="storage/img/icon.ico"></a>  
+        <a href="#"><img src="storage/img/icon.ico"></a>   
+    </footer>
+
+    <header>
+        <h1>
+            Find Trending Events
+        </h1>
+    </header>
+
+    <nav>
+        <form action="?" method="get">  
+            <img src="storage/img/icon.ico">
+            <textarea placeholder="Search event…"></textarea>   
+            <img src="storage/img/icon.ico">
+        </form>
+    </nav>
+
+    <section>
+        <div>
+            Music Concert
+        </div>
+        <div>
+            Exhibition
+        </div>
+        <div>
+            Stand Up Show
+        </div>
+        <div>
+            Theater
+        </div>
+    </section>
+
 </body>
 </html>
