--- a/index.html
+++ b/index.html
@@ -13,38 +13,102 @@
 
 <body>
     
-    <footer class="footer__header">  
+            <!--- Footer --->
+
+    <footer>  
         <a href="#"><img src="storage/img/icon.ico"></a>  
         <a href="#"><img src="storage/img/icon.ico"></a>   
     </footer>
 
+            <!--- Header --->
+    
     <header>
         <h1>
             Find Trending Events
         </h1>
     </header>
 
+            <!--- Navigation Bar --->
+
     <nav>
-        <form action="?" method="get">  
+        <form class="form" action="?" method="get">  
             <img src="storage/img/icon.ico">
             <textarea placeholder="Search event…"></textarea>   
             <img src="storage/img/icon.ico">
         </form>
     </nav>
 
-    <section>
-        <div>
-            Music Concert
+            <!--- Filter Events --->
+
+    <section class="filters">
+        <div>Music Concert</div>
+        <div>Exhibition</div>
+        <div>Stand Up Show</div>
+        <div>Theater</div>
+    </section>
+
+            <!--- Trending Events --->
+
+    <section class="trending-events">
+        <div class="trending-events__title">
+            <h2>Trending Events</h2>
+            <a href="#">See all</a>
         </div>
-        <div>
-            Exhibition
+
+                <!--- Container 1 --->
+
+        <div class="trending-events__container">
+            <div class="trending-events__container__image">
+                <img src="storage/img/icon.ico">
+            </div>
+            <div class="trending-events__container__info">
+                <div class="trending-events__container__info__left">
+                    <h3>Coldplay : Music of the Spheres</h3>
+                    <div class="trending-events__container__info__left__details">
+                        <div class="trending-events__container__info__left__details__location">
+                            <img src="storage/img/icon.ico">
+                            <p>Gelora Bung Karno Stadium..</p>
+                        </div>
+                        <div class="trending-events__container__info__left__details__date">
+                            <img src="storage/img/icon.ico">
+                            <p>November 15 2023</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="div__trending-events--info--rigth">
+                    <h4>Start from</h4>
+                    <p>IDR1.100.000</p>
+                </div>
+            </div>
         </div>
-        <div>
-            Stand Up Show
+
+                <!--- Container 2 --->
+
+        <div class="trending-events__container">
+            <div class="trending-events__container__image">
+                <img src="storage/img/icon.ico">
+            </div>
+            <div class="trending-events__container__info">
+                <div class="trending-events__container__info__left">
+                    <h3>Muse : Will of the People</h3>
+                    <div class="trending-events__container__info__left__details">
+                        <div class="trending-events__container__info__left__details__location">
+                            <img src="storage/img/icon.ico">
+                            <p>Jakarta, Indonesia</p>
+                        </div>
+                        <div class="trending-events__container__info__left__details__date">
+                            <img src="storage/img/icon.ico">
+                            <p>July 23 2023</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="div__trending-events--info--rigth">
+                    <h4>Start from</h4>
+                    <p>IDR500.000</p>
+                </div>
+            </div>
         </div>
-        <div>
-            Theater
-        </div>
+
     </section>
 
 </body>
