--- a/index.html
+++ b/index.html
@@ -111,5 +111,65 @@
 
     </section>
 
+            <!--- Nearby Events --->
+
+    <section class="nearby-events">
+        <div class="nearby-events__title">
+            <h2>Events Near You</h2>
+            <a href="#">See all</a>
+        </div>
+
+        <!--- Container 1 --->
+        
+        <div class="nearby-events__container">
+            <div class="nearby-events__container__image">
+                <img src="storage/img/icon.ico">
+            </div>
+            <div class="nearby-events__container__info">
+                <h3>Muse : Will of the People</h3>
+                <div class="nearby-events__container__info__details">
+                    <div class="nearby-events__container__info__details__location">
+                        <img src="storage/img/icon.ico">
+                        <p>Jakarta, Indonesia</p>
+                    </div>
+                    <div class="nearby-events__container__info__details__date">
+                        <img src="storage/img/icon.ico">
+                        <p>July 23 2023</p>
+                    </div>
+                    <div class="nearby-events__container__info__details__price">
+                        <img src="storage/img/icon.ico">
+                        <p>IDR500.000</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--- Container 2 --->
+
+        <div class="nearby-events__container">
+            <div class="nearby-events__container__image">
+                <img src="storage/img/icon.ico">
+            </div>
+            <div class="nearby-events__container__info">
+                <h3>One Direction : Where We Are</h3>
+                <div class="nearby-events__container__info__details">
+                    <div class="nearby-events__container__info__details__location">
+                        <img src="storage/img/icon.ico">
+                        <p>Jakarta, Indonesia</p>
+                    </div>
+                    <div class="nearby-events__container__info__details__date">
+                        <img src="storage/img/icon.ico">
+                        <p>Oct 29 2023</p>
+                    </div>
+                    <div class="nearby-events__container__info__details__price">
+                        <img src="storage/img/icon.ico">
+                        <p>IDR800.000</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+ 
+    </section>
+
 </body>
 </html>
