--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="icon" href="storage/img/icon.ico" type="image/ico">
-    <title>Title</title>
+    <title>Home</title>
     
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -16,8 +16,8 @@
             <!--- Footer --->
 
     <footer>  
-        <a href="#"><img src="storage/img/icon.ico"></a>  
-        <a href="#"><img src="storage/img/icon.ico"></a>   
+        <a href="#"><img src="storage/img/menu.svg"></a>  
+        <a href="#"><img src="storage/img/notification.svg"></a>   
     </footer>
 
             <!--- Header --->
@@ -32,9 +32,9 @@
 
     <nav>
         <form class="form" action="?" method="get">  
-            <img src="storage/img/icon.ico">
+            <img src="storage/img/search.svg">
             <textarea placeholder="Search event…"></textarea>   
-            <img src="storage/img/icon.ico">
+            <img src="storage/img/filters.svg">
         </form>
     </nav>
 
@@ -59,18 +59,18 @@
 
         <div class="trending-events__container">
             <div class="trending-events__container__image">
-                <img src="storage/img/icon.ico">
+                <a href="#"><img src="storage/img/t-eColdplay.png"></a>
             </div>
             <div class="trending-events__container__info">
                 <div class="trending-events__container__info__left">
                     <h3>Coldplay : Music of the Spheres</h3>
                     <div class="trending-events__container__info__left__details">
                         <div class="trending-events__container__info__left__details__location">
-                            <img src="storage/img/icon.ico">
+                            <img src="storage/img/location.svg">
                             <p>Gelora Bung Karno Stadium..</p>
                         </div>
                         <div class="trending-events__container__info__left__details__date">
-                            <img src="storage/img/icon.ico">
+                            <img src="storage/img/date.svg">
                             <p>November 15 2023</p>
                         </div>
                     </div>
@@ -86,18 +86,18 @@
 
         <div class="trending-events__container">
             <div class="trending-events__container__image">
-                <img src="storage/img/icon.ico">
+                <a href="#"><img src="storage/img/t-eMuse.png"></a>
             </div>
             <div class="trending-events__container__info">
                 <div class="trending-events__container__info__left">
                     <h3>Muse : Will of the People</h3>
                     <div class="trending-events__container__info__left__details">
                         <div class="trending-events__container__info__left__details__location">
-                            <img src="storage/img/icon.ico">
+                            <img src="storage/img/location.svg">
                             <p>Jakarta, Indonesia</p>
                         </div>
                         <div class="trending-events__container__info__left__details__date">
-                            <img src="storage/img/icon.ico">
+                            <img src="storage/img/date.svg">
                             <p>July 23 2023</p>
                         </div>
                     </div>
@@ -123,21 +123,21 @@
         
         <div class="nearby-events__container">
             <div class="nearby-events__container__image">
-                <img src="storage/img/icon.ico">
+                <a href="#"><img src="storage/img/n-eMuse.png"></a>
             </div>
             <div class="nearby-events__container__info">
                 <h3>Muse : Will of the People</h3>
                 <div class="nearby-events__container__info__details">
                     <div class="nearby-events__container__info__details__location">
-                        <img src="storage/img/icon.ico">
+                        <img src="storage/img/location.svg">
                         <p>Jakarta, Indonesia</p>
                     </div>
                     <div class="nearby-events__container__info__details__date">
-                        <img src="storage/img/icon.ico">
+                        <img src="storage/img/date.svg">
                         <p>July 23 2023</p>
                     </div>
                     <div class="nearby-events__container__info__details__price">
-                        <img src="storage/img/icon.ico">
+                        <img src="storage/img/price.svg">
                         <p>IDR500.000</p>
                     </div>
                 </div>
@@ -148,21 +148,21 @@
 
         <div class="nearby-events__container">
             <div class="nearby-events__container__image">
-                <img src="storage/img/icon.ico">
+                <a href="#"><img src="storage/img/n-eOneDirection.png"></a>
             </div>
             <div class="nearby-events__container__info">
                 <h3>One Direction : Where We Are</h3>
                 <div class="nearby-events__container__info__details">
                     <div class="nearby-events__container__info__details__location">
-                        <img src="storage/img/icon.ico">
+                        <img src="storage/img/location.svg">
                         <p>Jakarta, Indonesia</p>
                     </div>
                     <div class="nearby-events__container__info__details__date">
-                        <img src="storage/img/icon.ico">
+                        <img src="storage/img/date.svg">
                         <p>Oct 29 2023</p>
                     </div>
                     <div class="nearby-events__container__info__details__price">
-                        <img src="storage/img/icon.ico">
+                        <img src="storage/img/price.svg">
                         <p>IDR800.000</p>
                     </div>
                 </div>
