feat: :lipstick: Finished header
Header finished, modifying it a bit in HTML & with relative units

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     
     <header>
         <h1>
-            Find Trending Events
+            Find<br>
+            <span>Trending Events</span>
         </h1>
     </header>
 
