feat: :lipstick: Finished Filter Events
The Filter Events adapted to relative measures was completed.

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <!--- Filter Events --->
 
     <section class="filters">
-        <div>Music Concert</div>
-        <div>Exhibition</div>
-        <div>Stand Up Show</div>
-        <div>Theater</div>
+        <div class="one">Music Concert</div>
+        <div class="two">Exhibition</div>
+        <div class="three">Stand Up Show</div>
+        <div class="four">Theater</div>
     </section>
 
             <!--- Trending Events --->
