refactor: :art: Section Renaming
Sections were renamed for better semantics.

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 
 <body>
     
-            <!--- Footer --->
+            <!--- Header --->
 
-    <footer>  
+    <header>
         <a href="#"><img src="storage/img/menu.svg"></a>  
         <a href="#"><img src="storage/img/notification.svg"></a>   
-    </footer>
+    </header>
 
-            <!--- Header --->
+            <!--- Main --->
     
-    <header>
+    <main>
         <h1>
             Find<br>
             <span>Trending Events</span>
         </h1>
-    </header>
+    </main>
 
             <!--- Navigation Bar --->
 
