refactor: :recycle: Refactored Trending Events HTML.
Rearranged and improved the HTML of Trending Events so that text can be overlaid.

--- a/index.html
+++ b/index.html
@@ -56,56 +56,59 @@
             <a href="#">See all</a>
         </div>
 
-                <!--- Container 1 --->
-
         <div class="trending-events__container">
-            <div class="trending-events__container__image">
-                <a href="#"><img src="storage/img/t-eColdplay.png"></a>
-            </div>
-            <div class="trending-events__container__info">
-                <div class="trending-events__container__info__left">
-                    <h3>Coldplay : Music of the Spheres</h3>
-                    <div class="trending-events__container__info__left__details">
-                        <div class="trending-events__container__info__left__details__location">
-                            <img src="storage/img/location.svg">
-                            <p>Gelora Bung Karno Stadium..</p>
-                        </div>
-                        <div class="trending-events__container__info__left__details__date">
-                            <img src="storage/img/date.svg">
-                            <p>November 15 2023</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="div__trending-events--info--rigth">
-                    <h4>Start from</h4>
-                    <p>IDR1.100.000</p>
-                </div>
-            </div>
-        </div>
 
-                <!--- Container 2 --->
+            <!--- Contenedor 1 --->
 
-        <div class="trending-events__container">
-            <div class="trending-events__container__image">
-                <a href="#"><img src="storage/img/t-eMuse.png"></a>
-            </div>
-            <div class="trending-events__container__info">
-                <div class="trending-events__container__info__left">
-                    <h3>Muse : Will of the People</h3>
-                    <div class="trending-events__container__info__left__details">
-                        <div class="trending-events__container__info__left__details__location">
-                            <img src="storage/img/location.svg">
-                            <p>Jakarta, Indonesia</p>
+            <div class="trending-events__item">
+                <div class="trending-events__item__image">
+                    <a href="#">
+                        <img src="storage/img/t-eColdplay.png">
+                        <div class="trending-events__item__info">
+                            <h3>Coldplay: Music of the Spheres</h3>
+                            <div class="trending-events__details">
+                                <div class="trending-events__details__location">
+                                    <img src="storage/img/location.svg">
+                                    <p>Gelora Bung Karno Stadium</p>
+                                </div>
+                                <div class="trending-events__details__date">
+                                    <img src="storage/img/date.svg" alt="Date">
+                                    <p>November 15 2023</p>
+                                </div>
+                            </div>
+                            <div class="trending-events__price">
+                                <h4>Start from</h4>
+                                <p>IDR1.100.000</p>
+                            </div>
                         </div>
-                        <div class="trending-events__container__info__left__details__date">
-                            <img src="storage/img/date.svg">
-                            <p>July 23 2023</p>
-                        </div>
-                    </div>
+                    </a>
                 </div>
-                <div class="div__trending-events--info--rigth">
-                    <h4>Start from</h4>
-                    <p>IDR500.000</p>
+            </div>  
+
+            <!--- Contenedor 2 --->
+
+            <div class="trending-events__item">
+                <div class="trending-events__item__image">
+                    <a href="#">
+                        <img src="storage/img/t-eMuse.png" alt="Muse Event">
+                        <div class="trending-events__item__info">
+                            <h3>Muse: Will of the People</h3>
+                            <div class="trending-events__details">
+                                <div class="trending-events__details__location">
+                                    <img src="storage/img/location.svg">
+                                    <p>Jakarta, Indonesia</p>
+                                </div>
+                                <div class="trending-events__details__date">
+                                    <img src="storage/img/date.svg" alt="Date">
+                                    <p>July 23 2023</p>
+                                </div>
+                            </div>
+                            <div class="trending-events__price">
+                                <h4>Start from</h4>
+                                <p>IDR500.000</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
