feat: :poop: First attempt at t-e
This needs to be corrected…

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                     <p>Gelora Bung Karno Stadium</p>
                                 </div>
                                 <div class="trending-events__details__date">
-                                    <img src="storage/img/date.svg" alt="Date">
+                                    <img src="storage/img/date.svg">
                                     <p>November 15 2023</p>
                                 </div>
                             </div>
@@ -90,7 +90,7 @@
             <div class="trending-events__item">
                 <div class="trending-events__item__image">
                     <a href="#">
-                        <img src="storage/img/t-eMuse.png" alt="Muse Event">
+                        <img src="storage/img/t-eMuse.png">
                         <div class="trending-events__item__info">
                             <h3>Muse: Will of the People</h3>
                             <div class="trending-events__details">
@@ -99,7 +99,7 @@
                                     <p>Jakarta, Indonesia</p>
                                 </div>
                                 <div class="trending-events__details__date">
-                                    <img src="storage/img/date.svg" alt="Date">
+                                    <img src="storage/img/date.svg">
                                     <p>July 23 2023</p>
                                 </div>
                             </div>
