feat: :sparkles: Carrousel beta

--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 </head>
 
 <body>
+
+            <!--- Header --->
+
+    <header>
+        <a href="#"><img src="storage/img/back.svg"></a>  
+        <a href="#"><img src="storage/img/menu.svg"></a>   
+    </header>
+
+    <section>
+        <img src="storage/img/ticket.png">
+        <img src="storage/img/ticket.png">  
+    </section>
     
 </body>
 </html>
