--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <div class="trending-events__item">
                 <div class="trending-events__item__image">
-                    <a href="#">
+                    <a href="views/details.html">
                         <img src="storage/img/t-eColdplay.png">
                         <div class="trending-events__item__info">
                             <h3>Coldplay: Music of the Spheres</h3>
@@ -89,7 +89,7 @@
 
             <div class="trending-events__item">
                 <div class="trending-events__item__image">
-                    <a href="#">
+                    <a href="views/details.html">
                         <img src="storage/img/t-eMuse.png">
                         <div class="trending-events__item__info">
                             <h3>Muse: Will of the People</h3>
